steppable_region_publisher subscribe /rt_accumulated_heightmap_pointcloud_odomrelative/output and publish /steppable_region

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ find_package(catkin REQUIRED COMPONENTS
   jsk_recognition_utils
 )
 
+find_package(OpenCV REQUIRED)
+find_package(PCL 1.7 REQUIRED)
+
 generate_dynamic_reconfigure_options(
   cfg/CalcHeightmapGradient.cfg
 )
@@ -48,6 +51,8 @@ catkin_package(
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
+  ${PCL_INCLUDE_DIRS}
 )
 
 # add_executable(mask_image src/mask_image.cpp)
@@ -59,8 +64,8 @@ target_link_libraries(rect_publisher ${catkin_LIBRARIES})
 add_executable(convert_to_map_coords src/convert_to_map_coords.cpp)
 target_link_libraries(convert_to_map_coords ${catkin_LIBRARIES})
 
-add_executable(steppable_region_publisher src/steppable_region_publisher.cpp)
-target_link_libraries(steppable_region_publisher ${catkin_LIBRARIES})
+add_executable(steppable_region_publisher src/steppable_region_publisher.cpp src/polypartition.cpp)
+target_link_libraries(steppable_region_publisher ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
 
 add_executable(draw_contours src/draw_contours.cpp)
 target_link_libraries(draw_contours ${catkin_LIBRARIES})
